<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mortgagecalculatorapp.MainActivity"
    style="@style/Grid">

    <EditText
        android:id="@+id/editTextPurchasePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="25"
        />

    <TextView
        android:id="@+id/textViewPurchasePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/row_margin_bottom"
        android:background="@color/amount_background"
        android:elevation="2dp"
        android:padding="@dimen/textview_padding"
        android:hint="@string/enter_purchase_price"
        />


    <EditText
        android:id="@+id/editTextDownPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="45"
        />

    <TextView
        android:id="@+id/textViewDownPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/row_margin_bottom"
        android:background="@color/amount_background"
        android:elevation="2dp"
        android:padding="@dimen/textview_padding"
        android:hint="@string/enter_down_payment_amount"
        />


    <EditText
        android:id="@+id/editTextInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="30"
        />

    <TextView
        android:id="@+id/textViewInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/row_margin_bottom"
        android:background="@color/amount_background"
        android:elevation="2dp"
        android:padding="@dimen/textview_padding"
        android:hint="@string/enter_interest_rate"
        />

    <TextView
        android:id="@+id/ten_to_thirty_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/row_margin_bottom"
        android:background="@color/amount_background"
        android:elevation="2dp"
        android:padding="@dimen/textview_padding"
        android:text="Total Payments for 10, 20 and 30: "
        />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:text="@string/duration_year"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1" />

    <TextView
        android:id="@+id/monthly_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/row_margin_bottom"
        android:background="@color/amount_background"
        android:elevation="2dp"
        android:padding="@dimen/textview_padding"
        android:text="@string/total_payment_0_00"
        />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="1" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_gravity="fill_horizontal"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:text="@string/calculate" />
    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_gravity="fill_horizontal"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:text="@string/ok" />

</GridLayout>